amb refactory markup

--- a/amb ambiental/index.html
+++ b/amb ambiental/index.html
@@ -24,7 +24,8 @@
 
 	<!-- File links -->
 	<!-- CSS -->
-	<link rel="stylesheet" media="screen" href="../../css/app.css"/>
+	<link rel="stylesheet" media="screen" href="css/amb.css"/>
+	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	
 	<!-- Web Fonts -->
 	<link href='http://fonts.googleapis.com/css?family=Roboto:400,100,100italic,300,300italic,400italic,500,500italic,700,700italic,900,900italic' rel='stylesheet' type='text/css'>
@@ -34,19 +35,19 @@
 	<!-- Standart Favicon -->
 	<link rel="shortcut icon" type="image/png" href="../../img/deviceIcons/favicon@2x.png"/>
 	<!-- For iPad with high-resolution Retina display running iOS ≥ 7: -->
-	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="../../img/deviceIcons/apple-touch-icon-152x152-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="152x152" href="img/deviceIcons/apple-touch-icon-152x152-precomposed.png">
 	<!-- For iPad with high-resolution Retina display running iOS ≤ 6: -->
-	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="../../img/deviceIcons/apple-touch-icon-144x144-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/deviceIcons/apple-touch-icon-144x144-precomposed.png">
 	<!-- For iPhone with high-resolution Retina display running iOS ≥ 7: -->
-	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="../../img/deviceIcons/apple-touch-icon-120x120-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="120x120" href="img/deviceIcons/apple-touch-icon-120x120-precomposed.png">
 	<!-- For iPhone with high-resolution Retina display running iOS ≤ 6: -->
-	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="../../img/deviceIcons/apple-touch-icon-114x114-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/deviceIcons/apple-touch-icon-114x114-precomposed.png">
 	<!-- For the iPad mini and the first- and second-generation iPad on iOS ≥ 7: -->
-	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="../../img/deviceIcons/apple-touch-icon-76x76-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="76x76" href="img/deviceIcons/apple-touch-icon-76x76-precomposed.png">
 	<!-- For the iPad mini and the first- and second-generation iPad on iOS ≤ 6: -->
-	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="../../img/deviceIcons/apple-touch-icon-72x72-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/deviceIcons/apple-touch-icon-72x72-precomposed.png">
 	<!-- For non-Retina iPhone, iPod Touch, and Android 2.1+ devices: -->
-	<link rel="apple-touch-icon-precomposed" href="../../img/deviceIcons/apple-touch-icon-precomposed.png">
+	<link rel="apple-touch-icon-precomposed" href="img/deviceIcons/apple-touch-icon-precomposed.png">
 
 	<!-- Facebook -->
 	<meta property="og:type" content="website"/>
@@ -60,4 +61,135 @@
 	
 </head>
 <body>
+	<section class="main">
+		<header clas="mainHeader">
+			<h1>Amb Ambiental</h1>
+			<div class="toggleMenu">
+				<i class="fa fa-bars"></i>
+			</div><!-- End. .toggleMenu-->
+			<ul class="mainMenu">
+				<li>Negócios</li>
+				<li>Servicos</li>
+				<li>Contatos</li>
+			</ul><!-- End. .mainMenu-->
+		</header><!-- End. .mainHeader-->
+
+		<section class="intro">
+			<div class="featured">
+				<img src="#" alt="Capa site amb" />
+			</div><!-- End. .featured-->
+
+			<article class="description">
+				<p>A <strong>AMB</strong> é uma empresa voltada ao desenvolvimento sustentável através de assessoria e consultoria para o setor da construção civil no segmento de negócios sustentáveis que busquem ou não uma certificação.</p>
+			</article><!-- End. .description-->
+		</section><!-- End. .intro-->
+
+		<section class="mainSection business">
+			<header>
+				<h2>Negócios</h2>
+			</header>
+
+			<article class="description">
+				<p></p>
+			</article><!-- End. .description-->
+
+			<section class="quality">
+				<header>
+					<h3></h3>
+				</header>
+				<div class="qualityImg">
+					<img src="#" alt="Capa site amb" />
+				</div><!-- End. .qualityImg-->
+				<ul class="qualityList">
+					<li>Gerenciamento da certificação LEED, Processo AQUA e PBE EDIFICA;</li>
+					<li>Análise crítica de sustentabilidade no projeto, tanto de engenharia como arquitetura;</li>
+					<li>Acompanhamento e gerenciamento de sustentabilidade em obra;</li>
+					<li>Treinamentos e orientações para implantação de sustentabilidade em obra;</li>
+					<li>Planos de sustentabilidade voltados para obra e operação do edifício;</li>
+					<li>Desenvolvimento dos Stakeholders quanto a busca de sustentabilidade do empreendimento.</li>
+				</ul><!-- End. .qualityList-->
+			</section><!-- End. .quality-->
+		</section><!-- End. .mainSection.business-->
+
+		<section class="mainSection services">
+			<header>
+				<h2>Serviços</h2>
+			</header>
+
+			<article class="description">
+				<p>Atuamos em todas etapas no desenvolvimento do empreendimento desde sua concepção, execução e operação, oferecendo serviços específicos para cada fase, sendo eles</p>
+			</article><!-- End. .description-->
+
+			<section class="quality certify">
+				<header>
+					<h3>Certificações</h3>
+				</header>
+				<div class="qualityImg">
+					<img src="#" alt="Capa site amb" />
+				</div><!-- End. .qualityImg-->
+				<ul class="qualityList">
+					<li>Estudo de Viabilidade de certificação LEED, Processo AQUA e PBE EDIFICA;</li>
+					<li>Gerenciamento do processo de Certificação LEED, Processo AQUA e PBE EDIFICA;</li>
+					<li>Assessoria em projetos e memoriais para a certificação LEED, Processo AQUA e PBE Edifica.</li>
+				</ul><!-- End. .qualityList-->
+			</section><!-- End. .quality.certify-->
+
+			<section class="quality work">
+				<header>
+					<h3>Obra</h3>
+				</header>
+				<div class="qualityImg">
+					<img src="#" alt="Capa site amb" />
+				</div><!-- End. .qualityImg-->
+				<ul class="qualityList">
+					<li>Acompanhamento de obra para práticas e políticas sustentáveis;</li>
+					<li>Plano de Controle da Poluição, Erosão e Sedimentação do solo para a construção;</li>
+					<li>Plano de Gerenciamento dos Resíduos durante a Construção;</li>
+					<li>Plano de Gerenciamento da Qualidade do Ar Interno;</li>
+					<li>Controle e orientação para aquisição de produtos químicos, dentre eles COV. </li>
+				</ul><!-- End. .qualityList-->
+			</section><!-- End. .quality.work-->
+
+			<section class="quality projects">
+				<header>
+					<h3>Projetos</h3>
+				</header>
+				<div class="qualityImg">
+					<img src="#" alt="Capa site amb" />
+				</div><!-- End. .qualityImg-->
+				<ul class="qualityList">
+					<li>Análise no potencial de redução no consumo de água e diretrizes ao empreendimento das melhores estratégias;</li>
+					<li>Análise termo-energética do empreendimento através de simulações computacionais visando a diminuição do consumo de energético do edifício e taxa de renovação do ar interno;</li>
+					<li>Cálculo de permeabilidade das áreas do empreendimento;</li>
+					<li>Verificação da infraestrutura no entorno do empreendimento disponível e suas utilidades;</li>
+					<li>Plano de Gestão de Resíduos Sólidos para a Edificação;</li>
+					<li>Plano de Compras Sustentáveis – GreanCleaning;</li>
+					<li>Programa Ambiental Educacional para a Edificação;</li>
+					<li>Manual de Sustentabilidade do Proprietário e Locatário.</li>
+				</ul><!-- End. .qualityList-->
+			</section><!-- End. .quality.projects-->
+
+			<section class="quality differential">
+				<header>
+					<h3>Diferenciais</h3>
+				</header>
+				<div class="qualityImg">
+					<img src="#" alt="Capa site amb" />
+				</div><!-- End. .qualityImg-->
+				<ul class="qualityList">
+					<li>Desenvolvimento do trabalho junto ao cliente, seus projetistas e fornecedores com acompanhamento full time;</li>
+					<li>Planejamento antecipado ao cronograma da obra;</li>
+					<li>Domínio sobre as plataformas de registro, gerenciamento e auditorias dos órgãos auditores;</li>
+					<li>Experiência e Know How em diferentes tipologias de projetos sustentáveis</li>
+				</ul><!-- End. .qualityList-->
+			</section><!-- End. .quality work-->
+
+		</section><!-- End. .mainSection.differential-->
+
+		<footer class="mainFooter">
+		<div class="contact">
+			
+		</div><!-- End. .contact-->
+		</footer><!-- End. .mainFooter-->
+	</section><!-- End. .main-->
 </body>
