link intro image

--- a/amb ambiental/index.html
+++ b/amb ambiental/index.html
@@ -76,7 +76,7 @@
 
 		<section class="intro">
 			<div class="featured">
-				<img src="#" alt="Capa site amb" />
+				<img src="img/capa.jpg" alt="Capa site amb" />
 			</div><!-- End. .featured-->
 
 			<article class="description">
