Marckup fix + images links

--- a/amb ambiental/index.html
+++ b/amb ambiental/index.html
@@ -3,7 +3,7 @@
 <html lang="pt-br">
 <head>
 	<meta charset="utf-8"/>
-	<title>Aerochimps - We make apps fly!</title>
+	<title>AMB Ambiental</title>
 
 	<!--[if lte IE 8]>
 	<script src="bower_components/html5shiv/dist/html5shiv.js"></script>
@@ -89,17 +89,12 @@
 				<h2>Negócios</h2>
 			</header>
 
-			<article class="description">
-				<p></p>
-			</article><!-- End. .description-->
+			<div class="qualityImg">
+				<img src="img/negocios.jpg" alt="Negocios" />
+			</div><!-- End. .qualityImg-->
 
-			<section class="quality">
-				<header>
-					<h3></h3>
-				</header>
-				<div class="qualityImg">
-					<img src="#" alt="Capa site amb" />
-				</div><!-- End. .qualityImg-->
+			<section class="mainSection">
+			
 				<ul class="qualityList">
 					<li>Gerenciamento da certificação LEED, Processo AQUA e PBE EDIFICA;</li>
 					<li>Análise crítica de sustentabilidade no projeto, tanto de engenharia como arquitetura;</li>
@@ -125,7 +120,7 @@
 					<h3>Certificações</h3>
 				</header>
 				<div class="qualityImg">
-					<img src="#" alt="Capa site amb" />
+					<img src="img/certificacoes.jpg" alt="Certificações" />
 				</div><!-- End. .qualityImg-->
 				<ul class="qualityList">
 					<li>Estudo de Viabilidade de certificação LEED, Processo AQUA e PBE EDIFICA;</li>
@@ -139,7 +134,7 @@
 					<h3>Obra</h3>
 				</header>
 				<div class="qualityImg">
-					<img src="#" alt="Capa site amb" />
+					<img src="img/obra.jpg" alt="Obra" />
 				</div><!-- End. .qualityImg-->
 				<ul class="qualityList">
 					<li>Acompanhamento de obra para práticas e políticas sustentáveis;</li>
@@ -155,7 +150,7 @@
 					<h3>Projetos</h3>
 				</header>
 				<div class="qualityImg">
-					<img src="#" alt="Capa site amb" />
+					<img src="img/projetos.jpg" alt="Projetos" />
 				</div><!-- End. .qualityImg-->
 				<ul class="qualityList">
 					<li>Análise no potencial de redução no consumo de água e diretrizes ao empreendimento das melhores estratégias;</li>
@@ -174,7 +169,7 @@
 					<h3>Diferenciais</h3>
 				</header>
 				<div class="qualityImg">
-					<img src="#" alt="Capa site amb" />
+					<img src="img/diferenciais.jpg" alt="Diferenciais" />
 				</div><!-- End. .qualityImg-->
 				<ul class="qualityList">
 					<li>Desenvolvimento do trabalho junto ao cliente, seus projetistas e fornecedores com acompanhamento full time;</li>
