Link resert.css

--- a/amb ambiental/index.html
+++ b/amb ambiental/index.html
@@ -24,6 +24,7 @@
 
 	<!-- File links -->
 	<!-- CSS -->
+	<link rel="stylesheet" media="screen" href="css/reset.css"/>
 	<link rel="stylesheet" media="screen" href="css/amb.css"/>
 	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css">
 	
@@ -57,8 +58,6 @@
 	<meta property="og:title" content="Amb Ambiental - Projetos e consultorias ambientais"/>
 	<meta property="og:url" content="http://ambpca.com.br/lang/pt-br"/>
 	<meta property="og:description" content="empresa voltada ao desenvolvimento sustentável através de assessoria e consultoria para o setor da construção civil no segmento de negócios sustentáveis que busquem ou não uma certificação."/>
-
-	
 </head>
 <body>
 	<section class="main">
