.mainHedader + .mainMenu +.wrapper

--- a/amb ambiental/index.html
+++ b/amb ambiental/index.html
@@ -61,16 +61,18 @@
 </head>
 <body>
 	<section class="main">
-		<header clas="mainHeader">
-			<h1>Amb Ambiental</h1>
-			<div class="toggleMenu">
-				<i class="fa fa-bars"></i>
-			</div><!-- End. .toggleMenu-->
-			<ul class="mainMenu">
-				<li>Negócios</li>
-				<li>Servicos</li>
-				<li>Contatos</li>
-			</ul><!-- End. .mainMenu-->
+		<header class="mainHeader cf">
+			<div class="wrapper">
+				<h1>Amb Ambiental</h1>
+				<div class="toggleMenu">
+					<i class="fa fa-bars"></i>
+				</div><!-- End. .toggleMenu-->
+				<ul class="mainMenu">
+					<li>Negócios</li>
+					<li>Servicos</li>
+					<li>Contatos</li>
+				</ul><!-- End. .mainMenu-->
+			</div><!-- End. .wrapper-->
 		</header><!-- End. .mainHeader-->
 
 		<section class="intro">
